--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "watch": "parcel index.html",
-        "build": "parcel build index.html --no-source-maps",
+        "build": "echo 'Building frontend' && parcel build index.html --no-source-maps",
         "lint": "tslint --project . 'js/**/*.ts[x]'",
         "lint-fix": "tslint --project . 'js/**/*.ts[x]' --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
