--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-        "jsx": "react"
+        "outdir": "./build"
     },
-    "exclude": [
-        "*/dist/*"
+    "include": [
+        "./ts"
     ]
 }
