--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "root",
   "private": true,
   "scripts": {
-      "fetch-semaphore": "echo 'Fetching Semaphore code' && git submodule update --init semaphore"
+      "build": "lerna run bootstrap && lerna run build"
   },
   "devDependencies": {
-    "etherlime": "^2.1.0",
     "lerna": "^3.15.0"
   }
 }
