--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-        "outdir": "./build"
+        "outDir": "./build"
     },
     "include": [
         "./ts"
