--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "test": "etherlime test --path=build/ --skip-compilation",
     "build": "./scripts/buildSolidity.sh",
-    "circom": "0.0.27",
-    "circomlib": "git+https://github.com/iden3/circomlib.git#d91afa804ace6481f4468eebc0bf55229771e24c",
     "ganache": "./scripts/runGanache.sh"
   },
   "author": "",
@@ -21,6 +19,8 @@
     "truffle-artifactor": "^4.0.10"
   },
   "dependencies": {
-    "circomlib": "git+https://github.com/iden3/circomlib.git#d91afa804ace6481f4468eebc0bf55229771e24c"
+    "circomlib": "git+https://github.com/iden3/circomlib.git#d91afa804ace6481f4468eebc0bf55229771e24c",
+    "circom": "0.0.27",
+    "snarkjs": "^0.1.13"
   }
 }
