--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "etherlime test --path=build/ --skip-compilation",
     "build": "./scripts/buildSolidity.sh",
+    "watch": "tsc --watch",
     "ganache": "./scripts/runGanache.sh"
   },
   "author": "",
