--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "./scripts/buildSolidity.sh && tsc",
     "test": "etherlime test --path=build/ --skip-compilation --timeout 10000",
-    "build": "./scripts/buildSolidity.sh",
     "watch": "tsc --watch",
     "ganache": "./scripts/runGanache.sh"
   },
