--- a/contracts/package.json
+++ b/contracts/package.json
@@ -27,7 +27,6 @@
     "circomlib": "git+https://github.com/iden3/circomlib.git#d91afa804ace6481f4468eebc0bf55229771e24c",
     "del": "^4.1.1",
     "snarkjs": "^0.1.13",
-    "wasmbuilder": "0.0.3",
-    "websnark": "0.0.4"
+    "websnark": "git+https://github.com/iden3/websnark.git"
   }
 }
