--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "semaphore"]
 	path = semaphore
-	url = git@github.com:weijiekoh/semaphore.git
+	url = git@github.com:weijiekoh/semaphore.git#feat/no-gas-refunds
