--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "packages": [
     "frontend",
-    "contracts"
+    "contracts",
+    "utils"
   ],
   "version": "0.0.1",
   "npmClient": "npm"
