added mix amt and operator fee as config vals

--- a/config/local-dev.yaml
+++ b/config/local-dev.yaml
@@ -1,6 +1,10 @@
 ---
 
 printConfigDetails: true
+
+mixAmtEth: "0.1"
+operatorFeeEth: "0.0005"
+
 chain:
   url: "http://localhost:8545"
   chainId: 1234
