updated .gitignore and added web3 deposit functionality to the UI (WIP)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 contracts/.etherlime-store/
 contracts/compiled/
 contracts/build/
+contracts/.outputParameter
 utils/build/
 frontend/dist/
 frontend/.cache/
+frontend/ts/abis
+frontend/ts/deployedAddresses.json
 node_modules/
 # Swap
 [._]*.s[a-v][a-z]
