--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
         "watch": "parcel index.html",
         "build": "echo 'Building frontend' && parcel build index.html --no-source-maps",
         "lint": "tslint --project . 'js/**/*.ts[x]'",
-        "lint-fix": "tslint --project . 'js/**/*.ts[x]' --fix",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint-fix": "tslint --project . 'js/**/*.ts[x]' --fix"
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Koh Wei Jie",
+    "license": "GPL-3.0-or-later",
+    "alias": {
+      "worker_threads": "./externals/worker_threads.js"
+    },
     "dependencies": {
         "bulma": "^0.7.5",
         "ethers": "^4.0.30",
