--- a/utils/package.json
+++ b/utils/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "mixer-utils",
-  "version": "1.0.0",
-  "description": "",
-  "main": "build/index.js",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "config": "^3.1.0",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "@types/node": "^12.0.10"
-  }
+    "name": "mixer-utils",
+    "version": "1.0.0",
+    "description": "",
+    "main": "build/index.js",
+    "scripts": {
+        "build": "tsc",
+        "watch": "tsc --watch"
+    },
+    "author": "Koh Wei Jie",
+    "license": "GPL-3.0-or-later",
+    "dependencies": {
+        "config": "^3.1.0",
+        "path": "^0.12.7"
+    },
+    "devDependencies": {
+        "@types/node": "^12.0.10"
+    }
 }
