--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
         "alwaysStrict": true,
         "noImplicitAny": false,
         "forceConsistentCasingInFileNames": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
