--- a/utils/package.json
+++ b/utils/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "build/index.js",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc && node build/export-config.js > ../frontend/ts/exported_config.json",
         "watch": "tsc --watch"
     },
     "author": "Koh Wei Jie",
