--- a/crypto/package.json
+++ b/crypto/package.json
@@ -14,8 +14,9 @@
     "blakejs": "^1.1.0",
     "circomlib": "git+https://github.com/kobigurk/circomlib.git",
     "ethers": "^4.0.32",
-    "snarkjs": "^0.1.14",
-    "websnark": "git+https://github.com/iden3/websnark.git"
+    "snarkjs": "^0.1.13",
+    "websnark": "git+https://github.com/iden3/websnark.git",
+    "zkp-sbmtjs": "^0.3.0"
   },
   "devDependencies": {}
 }
