--- a/utils/package.json
+++ b/utils/package.json
@@ -11,7 +11,8 @@
     "license": "GPL-3.0-or-later",
     "dependencies": {
         "config": "^3.1.0",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "verror": "^1.10.0"
     },
     "devDependencies": {
         "@types/node": "^12.0.10"
