--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# prod config
+config/*-prod.yaml
+config/*-prod.yml
+
 **/build
 utils/build
 contracts/.privateKeys.json
@@ -12,7 +16,7 @@ contracts/.outputParameter
 frontend/dist/
 frontend/.cache/
 frontend/ts/abis
-frontend/ts/deployedAddresses.json
+deployedAddresses.json
 node_modules/
 lerna-debug.log
 # Swap
