--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
     "axios": "^0.19.0",
+    "snarkjs": "^0.1.13",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2"
   }
