--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build": "./scripts/buildSolidity.sh && tsc",
-    "test": "etherlime test --path=build/tests/Mixer.test.js --skip-compilation --timeout 90000",
-    "test-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/tests/Mixer.test.js --skip-compilation --timeout 90000",
+    "build": "tsc && ./scripts/buildSolidity.sh",
+    "test": "etherlime test --path=build/__tests__/Mixer.test.js --skip-compilation --timeout 90000",
+    "test-debug": "node --inspect-brk ./node_modules/.bin/etherlime test --path=build/__tests__/Mixer.test.js --skip-compilation --timeout 90000",
     "watch": "tsc --watch",
     "deploy": "NODE_ENV=local-dev ./scripts/deploy.sh",
     "ganache": "./scripts/runGanache.sh"
@@ -31,6 +31,7 @@
     "config": "^3.1.0",
     "openzeppelin-solidity": "^1.11.0",
     "mixer-crypto": "1.0.0",
+    "mixer-config": "1.0.0",
     "mixer-utils": "1.0.0"
   }
 }
