--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "lerna run bootstrap && lerna run build"
+    "bootstrap": "lerna run bootstrap",
+    "build": "lerna run build"
   },
   "devDependencies": {
     "lerna": "^3.15.0",
