--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna run bootstrap",
+    "bootstrap": "lerna bootstrap",
     "build": "lerna run build"
   },
   "devDependencies": {
