--- a/config/package.json
+++ b/config/package.json
@@ -11,6 +11,7 @@
     "license": "GPL-3.0-or-later",
     "dependencies": {
         "config": "^3.1.0",
+        "js-yaml": "^3.13.1",
         "path": "^0.12.7"
     },
     "devDependencies": {
