--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -11,15 +11,16 @@ services:
       - "3000:3000"
     networks:
       - "mixer-net"
-  #mixer-testnet:
-    #container-name: mixer-testnet
-    #build:
-      #context: ../contracts
-      #dockerfile: ../contracts/Dockerfile
-    #ports:
-      #- "8575:8575"
-    #networks:
-      #- "mixer-net"
+
+  mixer-testnet:
+    container-name: mixer-testnet
+    build:
+      context: ../contracts
+      dockerfile: ../contracts/Dockerfile
+    ports:
+      - "8575:8575"
+    networks:
+      - "mixer-net"
 
 
 networks:
