fixed typo in docker-compose.dev.yml

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       - "mixer-net"
 
   mixer-testnet:
-    container-name: mixer-testnet
+    container_name: mixer-testnet
     build:
       context: ../contracts
       dockerfile: ../contracts/Dockerfile
