docker build scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "buildBaseImage": "./scripts/buildBaseImage.sh",
+    "buildImages": "./scripts/buildImages.sh"
   },
   "devDependencies": {
     "lerna": "^3.15.0",
