fixed frontend countdown; moved mimcsponge and tree to crypto to avoid importing zkp-sbmtjs; backend dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ FROM node:${NODE_VERSION}-stretch AS mixer-backend
 
 COPY --from=mixer-base /mixer /mixer
 
+RUN rm -rf /mixer/frontend
+
 WORKDIR /mixer/backend
 
 CMD ["node", "build/index.js"]
