--- a/crypto/package.json
+++ b/crypto/package.json
@@ -9,13 +9,17 @@
   },
   "author": "Koh Wei Jie",
   "license": "GPL-3.0-or-later",
+  "_moduleAliases": {
+    "@mixer-crypto": "."
+  },
   "dependencies": {
+    "await-lock": "^1.1.3",
     "@types/node": "^12.0.10",
     "circomlib": "git+https://github.com/kobigurk/circomlib.git",
     "ethers": "^4.0.32",
+    "module-alias": "^2.2.0",
     "snarkjs": "^0.1.13",
-    "websnark": "git+https://github.com/iden3/websnark.git",
-    "zkp-sbmtjs": "^0.3.1"
+    "websnark": "git+https://github.com/iden3/websnark.git"
   },
   "devDependencies": {}
 }
