--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -31,5 +31,23 @@ services:
     environment:
       - NODE_ENV=docker-dev
 
+  mixer-frontend:
+    container_name: mixer-frontend
+
+    build:
+      context: ../frontend
+
+    ports:
+      - target: 8001
+      - published: 80
+      - protocol: tcp
+      - mode: host
+
+    networks:
+      - "mixer-net"
+
+    environment:
+      - NODE_ENV=docker-dev
+
 networks:
   mixer-net:
