fixed incorrect server name in nginx.conf

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -73,7 +73,7 @@ http {
     server {
         server_tokens off;
         listen 8001;
-        server_name uppercase;
+        server_name mixer-frontend;
         real_ip_header X-Real-IP;
         index index.html;
 
