--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,5 +1,4 @@
 version: '3.7'
-
 services: 
   mixer-backend: 
     container_name: mixer-backend
@@ -42,6 +41,20 @@ services:
       - published: 80
       - protocol: tcp
       - mode: host
+
+    networks:
+      - "mixer-net"
+
+    environment:
+      - NODE_ENV=docker-dev
+
+    mixer-etcd:
+      container_name: mixer-etcd
+
+      image: jumanjiman/etcd
+
+    ports:
+      - "2379:2379"
 
     networks:
       - "mixer-net"
