private key storage in docker secrets; config for network name and id in frontend; fixed deploy script to wait for txes; gitignore exported_config

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ contracts/.etherlime-store/
 contracts/compiled/
 contracts/.outputParameter
 frontend/dist/
+frontend/ts/exported_config.json
 frontend/.cache/
 frontend/ts/abis
 deployedAddresses.json
