--- a/config/local-dev.yaml
+++ b/config/local-dev.yaml
@@ -8,6 +8,7 @@ chain:
   chainId: 1234
   mix:
     gasLimit: 8000000
+  privateKeysPath: "../privateKeys.json"
   deployedAddresses:
     MiMC: '0x8CdaF0CD259887258Bc13a92C0a6dA92698644C0'
     MultipleMerkleTree: '0xF12b5dd4EAD5F743C6BaA640B0216200e89B60Da'
@@ -36,3 +37,5 @@ frontend:
   countdown:
     endsAtUtcMidnight: false
     endsAfterSecs: 5
+  supportedNetworkName: "local"
+  supportedNetwork: 1234
