disable docker testnet; make backend dockerfile only copy build dir

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,8 @@ ARG NODE_VERSION=11.14.0
 
 FROM node:${NODE_VERSION}-stretch AS mixer-backend
 
-COPY --from=mixer-base /mixer /mixer
+COPY --from=mixer-base /mixer/backend/build /build
 
-RUN rm -rf /mixer/frontend
-
-WORKDIR /mixer/backend
+WORKDIR /
 
 CMD ["node", "build/index.js"]
