undid change to backend dockerfile; updated kovan contract addresses and node info

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,8 @@ ARG NODE_VERSION=11.14.0
 
 FROM node:${NODE_VERSION}-stretch AS mixer-backend
 
-COPY --from=mixer-base /mixer/backend/build /build
+COPY --from=mixer-base /mixer/backend /mixer/backend
 
-WORKDIR /
+WORKDIR /mixer/backend
 
 CMD ["node", "build/index.js"]
