fixed backend dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,9 @@ ARG NODE_VERSION=11.14.0
 
 FROM node:${NODE_VERSION}-stretch AS mixer-backend
 
-COPY --from=mixer-base /mixer/backend /mixer/backend
+COPY --from=mixer-base /mixer /mixer
+
+RUN rm -rf /mixer/frontend
 
 WORKDIR /mixer/backend
 
