block explorer link in local-dev

--- a/config/local-dev.yaml
+++ b/config/local-dev.yaml
@@ -39,3 +39,4 @@ frontend:
     endsAfterSecs: 5
   supportedNetworkName: "local"
   supportedNetwork: 1234
+  blockExplorerTxPrefix: "https://kovan.etherscan.io/tx/"
