--- a/config/docker-dev.yaml
+++ b/config/docker-dev.yaml
@@ -1,7 +1,7 @@
 ---
 env: 'docker-dev'
 mixAmtEth: "0.1"
-operatorFeeEth: "0.0005"
+burnFeeEth: "0.0005"
 
 chain:
   url: "https://kovan.infura.io/v3/5d37c494621a43558d77c90e368d4022"
