made backend dockerfile not copy everything again and just use mixer-base

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,12 @@
 ARG NODE_VERSION=11.14.0
 
-FROM node:${NODE_VERSION}-stretch AS mixer-backend
+#FROM node:${NODE_VERSION}-stretch AS mixer-backend
 
-COPY --from=mixer-base /mixer /mixer
+#COPY --from=mixer-base /mixer /mixer
 
-RUN rm -rf /mixer/frontend
+#RUN rm -rf /mixer/frontend
+
+FROM mixer-base AS mixer-backend
 
 WORKDIR /mixer/backend
 
