--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "watch": "node server.js",
-        "build": "echo 'Building frontend' && parcel build index.html --no-source-maps --out-dir=build",
+        "build": "echo 'Building frontend' && parcel build index.html --no-source-maps --out-dir=build --no-cache",
         "lint": "tslint --project . 'js/**/*.ts[x]'",
         "lint-fix": "tslint --project . 'js/**/*.ts[x]' --fix"
     },
