--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "buildImages": "./scripts/buildImages.sh"
   },
   "devDependencies": {
-    "lerna": "^3.15.0",
+    "lerna": "3.15.0",
     "typescript": "^3.5.2"
   }
 }
