--- a/crypto/package.json
+++ b/crypto/package.json
@@ -13,11 +13,12 @@
     "@mixer-crypto": "."
   },
   "dependencies": {
-    "await-lock": "^1.1.3",
     "@types/node": "^12.0.10",
+    "await-lock": "^1.1.3",
     "circomlib": "git+https://github.com/kobigurk/circomlib.git",
     "ethers": "^4.0.32",
     "module-alias": "^2.2.0",
+    "semaphore-merkle-tree": "^1.0.4",
     "snarkjs": "^0.1.13",
     "websnark": "git+https://github.com/iden3/websnark.git"
   },
